# ucx-wheels

./: .gitignore  .pre-commit-config.yaml  README.md  VERSION
.github/: CODEOWNERS
.github/workflows/: build.yaml  build_and_test.yaml  pr.yaml
ci/: build_wheel.sh  symbols_cuda11.txt  symbols_cuda12.txt  symbols_cuda13.txt  test_wheel.sh
python/libucx/: MANIFEST.in  pyproject.toml  setup.py
python/libucx/libucx/: __init__.py  load.py
utils/: check_cuda_symbols.sh  cuda_symbols.sh  generate_cuda_symbols.sh  test_check_cuda_symbols.sh
