# Copyright (c) 2024, NVIDIA CORPORATION.

[build-system]
build-backend = "rapids_build_backend.build"
requires = [
    "rapids-build-backend>=0.3.0,<0.4.0dev0"
]

[project]
name = "libucx"
dynamic = ["version"]
description = "The Unified Communication X library (UCX)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" },
]
license = { text = "BSD-3-Clause" }
# Note: We can probably relax this, but it's not critical for now.
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
]

[project.entry-points."cmake.prefix"]
libucx = "libucx"

[project.urls]
Homepage = "https://github.com/openucx/ucx"

[tool.rapids-build-backend]
build-backend = "setuptools.build_meta"
commit-files = [
    "libucx/GIT_COMMIT"
]
dependencies-file = ""
requires = [
    "packaging",
    "setuptools>=64.0.0",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}
