# Copyright (c) 2024-2026, NVIDIA CORPORATION.

[build-system]
build-backend = "rapids_build_backend.build"
requires = [
    "rapids-build-backend>=0.4.0,<0.5.0.dev0",
    "setuptools>=77.0.0",
]

[project]
name = "libucx"
dynamic = ["version"]
description = "The Unified Communication X library (UCX)"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" },
]
license = "BSD-3-Clause"
# Note: We can probably relax this, but it's not critical for now.
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Topic :: System :: Hardware",
    "Topic :: System :: Systems Administration",
]

[project.entry-points."cmake.prefix"]
libucx = "libucx"

[project.urls]
Homepage = "https://github.com/openucx/ucx"

[tool.pydistcheck]
select = [
    "distro-too-large-compressed",
]

# PyPI hard limit is 1GiB, but try to keep this as small as possible
max_allowed_size_compressed = '50Mi'

[tool.rapids-build-backend]
build-backend = "setuptools.build_meta"
commit-files = [
    "libucx/GIT_COMMIT"
]
dependencies-file = ""
requires = [
    "packaging",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = "VERSION"}
